k8s-internals/development/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: nginx-reverse-proxy
  ports:
    - port: 80
      targetPort: 80
