k8s-internals/development/web-client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-client-service
  labels:
    app: web-client
  namespace: development
spec:
  selector:
    app: web-client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4321
