k8s-internals/development/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: development
  annotations:
    networking.gke.io/managed-certificates: api-genvidea-com-cert
spec:
  rules:
    - host: web.genvidea.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
